; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_cycx_x25.c_cycx_x25_send.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_cycx_x25.c_cycx_x25_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cycx_device = type { i32 }

@__const.cycx_x25_send.d = private unnamed_addr constant [6 x i8] c"?\FF\10??\00", align 1
@X25_DATA_REQUEST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cycx_device*, i8, i8, i8, i32, i8*)* @cycx_x25_send to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cycx_x25_send(%struct.cycx_device* %0, i8 signext %1, i8 signext %2, i8 signext %3, i32 %4, i8* %5) #0 {
  %7 = alloca %struct.cycx_device*, align 8
  %8 = alloca i8, align 1
  %9 = alloca i8, align 1
  %10 = alloca i8, align 1
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca [6 x i8], align 1
  store %struct.cycx_device* %0, %struct.cycx_device** %7, align 8
  store i8 %1, i8* %8, align 1
  store i8 %2, i8* %9, align 1
  store i8 %3, i8* %10, align 1
  store i32 %4, i32* %11, align 4
  store i8* %5, i8** %12, align 8
  %14 = bitcast [6 x i8]* %13 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %14, i8* align 1 getelementptr inbounds ([6 x i8], [6 x i8]* @__const.cycx_x25_send.d, i32 0, i32 0), i64 6, i1 false)
  %15 = load i8, i8* %9, align 1
  %16 = getelementptr inbounds [6 x i8], [6 x i8]* %13, i64 0, i64 3
  store i8 %15, i8* %16, align 1
  %17 = getelementptr inbounds [6 x i8], [6 x i8]* %13, i64 0, i64 0
  store i8 %15, i8* %17, align 1
  %18 = load i8, i8* %10, align 1
  %19 = getelementptr inbounds [6 x i8], [6 x i8]* %13, i64 0, i64 4
  store i8 %18, i8* %19, align 1
  %20 = load %struct.cycx_device*, %struct.cycx_device** %7, align 8
  %21 = load i32, i32* @X25_DATA_REQUEST, align 4
  %22 = load i8, i8* %8, align 1
  %23 = bitcast [6 x i8]* %13 to i8**
  %24 = load i8*, i8** %12, align 8
  %25 = load i32, i32* %11, align 4
  %26 = call i32 @x25_exec(%struct.cycx_device* %20, i32 %21, i8 signext %22, i8** %23, i32 5, i8* %24, i32 %25)
  ret i32 %26
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @x25_exec(%struct.cycx_device*, i32, i8 signext, i8**, i32, i8*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
